add component Dashboard

--- a/openlab-project/ClientApp/package.json
+++ b/openlab-project/ClientApp/package.json
@@ -10,7 +10,8 @@
     "build": "ng build",
     "build:ssr": "ng run openlab_project:server:dev",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "generate-dash": "ng g c dashboard --module=app.module.ts"
   },
   "private": true,
   "dependencies": {
