--- a/openlab-project/ClientApp/angular.json
+++ b/openlab-project/ClientApp/angular.json
@@ -1,4 +1,5 @@
 {
+
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "newProjectRoot": "projects",
@@ -100,7 +101,7 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [ "node_modules/bootstrap/dist/js/bootstrap.js" ]
           }
         },
         "server": {
