--- a/openlab-project/ClientApp/package.json
+++ b/openlab-project/ClientApp/package.json
@@ -11,7 +11,8 @@
     "build:ssr": "ng run openlab_project:server:dev",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "generate-dash": "ng g c dashboard --module=app.module.ts"
+    "generate-dash": "ng g c dashboard --module=app.module.ts",
+    "generate-guilds": "ng g c gulid-details --module=app.module.ts"
   },
   "private": true,
   "dependencies": {
