--- a/openlab-project/ClientApp/angular.json
+++ b/openlab-project/ClientApp/angular.json
@@ -118,7 +118,8 @@
               "sourceMap": false,
               "namedChunks": false,
               "extractLicenses": true,
-              "vendorChunk": true
+              "vendorChunk": true,
+              "buildOptimizer": true
             },
             "production": {
               "optimization": true,
@@ -126,14 +127,14 @@
               "sourceMap": false,
               "namedChunks": false,
               "extractLicenses": true,
-              "vendorChunk": false
+              "vendorChunk": false,
+              "buildOptimizer": true
             }
           }
         }
       }
     }
   },
-  "defaultProject": "openlab_project",
   "cli": {
     "analytics": "6ad64664-9295-46e4-aa37-bbb93b315fb9"
   }
